--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,6 @@
 }
 
 .LearnMoreSection button {
-
     margin-top: 25px;
     font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
     font-size: 18px;
@@ -116,6 +115,11 @@
     border-radius: 5px;
     box-shadow: 0px -1px 0 0 #d3d5d6, 0px 1px 0 0 #d3d5d6;
     border: solid 1px #158864;
+}
+.LearnMoreSection button:hover{
+    color: #158864;
+    box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.57);
+
 }
 
 .sliderH3 {
