--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,21 @@
 .personImgQuote {
     width: 56px;
     height: 56px;
-    margin: 29px 16px 25px 0px;
-
+    margin: 30px 15px 25px 0px;
 }
 
 .personName {
     margin: 30px 1px 0px 16px;
 }
 
+.quoteBox {
+    border-left: 1px solid #dee2e6;
+}
+
 .quoteP {
     width: 544px;
     height: 166px;
     margin: 25px 4px 29px 0px;
-
 }
 
 .quoteP p {
@@ -34,8 +36,7 @@
     letter-spacing: 0.54px;
     text-align: left;
     color: #222c33;
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
-
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
 }
 
 .personBox {
@@ -43,8 +44,7 @@
 }
 
 .personName .personNameTitle {
-
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     font-size: 18px;
     font-weight: bolder;
     font-stretch: normal;
@@ -56,7 +56,7 @@
 }
 
 .personName .personNameSpa {
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     font-size: 17px;
     font-weight: normal;
     font-stretch: normal;
@@ -70,12 +70,10 @@
 .LearnMoreSection {
     height: 319px;
     background-color: #f6f6f6;
-
 }
 
 .LearnMoreSection h3 {
-
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     font-size: 48px;
     font-weight: bold;
     font-stretch: normal;
@@ -87,11 +85,10 @@
 }
 
 .LearnMoreSection p {
-
     margin: 0px 100px;
     padding: 0px 100px;
 
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     font-size: 27px;
     font-weight: 100;
     font-stretch: normal;
@@ -103,7 +100,7 @@
 
 .LearnMoreSection button {
     margin-top: 25px;
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     font-size: 18px;
     font-weight: bolder;
     font-stretch: normal;
@@ -116,10 +113,10 @@
     box-shadow: 0px -1px 0 0 #d3d5d6, 0px 1px 0 0 #d3d5d6;
     border: solid 1px #158864;
 }
-.LearnMoreSection button:hover{
-    color: #158864;
-    box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.57);
 
+.LearnMoreSection button:hover {
+    color: #158864;
+    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.57);
 }
 
 .sliderH3 {
@@ -136,11 +133,10 @@
 .latestNewsSection {
     padding: 57px 512px 57px 513px;
     background-color: #f6f6f6;
-
 }
 
 .latestNewsSection .LatestNewsH2 {
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
 
     font-size: 48px;
     font-weight: bold;
@@ -150,15 +146,12 @@
     letter-spacing: normal;
     text-align: left;
     color: #158864;
-
 }
 
 .tweetDisply {
     width: 397px;
     /* height: 479px; */
 }
-
-
 
 .blogBox {
     width: 448px;
@@ -176,11 +169,10 @@
 .blogBox .blogBoxImg img {
     width: 192px;
     height: 127px;
-
 }
 
 .blogBox .blogBoxP {
-    font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
+    font-family: "NHaasGroteskDSPro-65Md", sans-serif;
 }
 
 .blogBox .blogBoxP p {
@@ -206,7 +198,7 @@
 }
 
 .sharedValuesContainer {
-    margin: 40px 260px;
+    margin: 40px 100px;
 }
 
 .sharedValuesH2 {
@@ -221,22 +213,37 @@
     color: #158864;
 }
 
+.sharedValuesContainer .textWrap {
+    width: 48%;
+}
+
 .sharedValuesBox {
     margin: 0px 25px;
 }
 
 .sharedValuesImg {
-    width: 650px;
+    width: 48%;
     height: auto;
     border-radius: 8px;
     /* margin: 10px 100px; */
     /* overflow: hidden; */
-
 }
 
 .sharedValuesImg img {
     width: 100%;
     height: 100%;
+}
+
+.sharedValuesImg1 {
+    content: url("/images/Shared-Values-1.png");
+}
+
+.sharedValuesImg2 {
+    content: url("/images/Shared-Values-2.png");
+}
+
+.sharedValuesImg3 {
+    content: url("/images/Shared-Values-3.png");
 }
 
 .sharedValuesBox h3 {
@@ -248,7 +255,7 @@
     letter-spacing: 0.96px;
     text-align: left;
     color: #158864;
-    padding: 25px 0px;
+    padding: 0px 0px 25px 0px;
     border-bottom: 1px solid #158864;
 }
 
@@ -262,30 +269,31 @@
     text-align: left;
     color: #222c33;
 }
-.QuestionsSection{
-    background-color: #f6f6f6
-}
-.QuestionsSection .QuestionH2{
-text-align: center;
-margin-bottom: 49px;
-/* padding: 35px 0px; */
-font-size: 45px;
-  font-weight: 700;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.33;
-  letter-spacing: normal;
-  color: #158864;
+
+.QuestionsSection {
+    background-color: #f6f6f6;
 }
 
-@media(max-width:1450px){
+.QuestionsSection .QuestionH2 {
+    text-align: center;
+    margin-bottom: 49px;
+    /* padding: 35px 0px; */
+    font-size: 45px;
+    font-weight: 700;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    color: #158864;
+}
+
+@media (max-width: 1500px) {
     .quoteP {
         width: 450px;
         height: 166px;
         margin: 25px 4px 29px 0px;
-    
     }
-    
+
     .quoteP p {
         font-size: 16px;
         font-weight: normal;
@@ -295,10 +303,223 @@ font-size: 45px;
         letter-spacing: 0.48px;
         text-align: left;
         color: #222c33;
-        font-family: 'NHaasGroteskDSPro-65Md', sans-serif;
-    
+        font-family: "NHaasGroteskDSPro-65Md", sans-serif;
     }
+
+    .personImgQuote {
+        width: 50px;
+        height: 50px;
+        margin: 30px 0px 25px 0px;
+    }
+
+    .personName .personNameSpa {
+        font-size: 16px;
+        letter-spacing: 0.5px;
+    }
+
+
+    .sharedValuesBox h3 {
+        font-size: 30px;
+        padding: 0px 0px 20px 0px;
+    }
+
+    .sharedValuesBox p {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 1366px) {
+    .personName .personNameTitle {
+        font-size: 17px;
+        letter-spacing: 0.5px;
+    }
+
+    .personName .personNameSpa {
+        font-size: 15px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #222c33;
+    }
+
     .sharedValuesContainer {
-        margin: 40px 64px;
+        margin: 40px 60px;
     }
+
+    .sharedValuesBox {
+        margin: 0px 20px;
+    }
+
+    .sharedValuesBox h3 {
+        font-size: 30px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 0.94;
+        letter-spacing: 0.96px;
+        text-align: left;
+        color: #158864;
+        padding: 0px 0px 20px 0px;
+        border-bottom: 1px solid #158864;
+    }
+
+    .sharedValuesBox p {
+        font-size: 17px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.67;
+        letter-spacing: 0.54px;
+        text-align: left;
+        color: #222c33;
+    }
+
+}
+
+@media (max-width: 1280px) {
+    .quoteP {
+        width: 400px;
+        height: 160px;
+        margin: 25px 0px 29px 0px;
+    }
+
+    .quoteP p {
+        font-size: 15px;
+
+        line-height: 1.53;
+        letter-spacing: 0.48px;
+    }
+
+    .personName .personNameTitle {
+        font-size: 16px;
+        letter-spacing: 0.5px;
+    }
+
+    .personName .personNameSpa {
+        font-size: 14px;
+        letter-spacing: 0.48px;
+    }
+
+    .LearnMoreSection p {
+        margin: 0px 50px;
+        padding: 0px 50px;
+
+        font-size: 20px;
+        line-height: 1.32;
+        letter-spacing: 0.84px;
+    }
+
+    .sliderH3 {
+        font-size: 40px;
+        line-height: 0.87;
+    }
+
+    .blogBox {
+
+        margin: 10px 18px 15px 0;
+        padding: 15px 15px 15px 15px;
+
+    }
+
+    .sharedValuesContainer {
+        margin: 40px 20px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .quoteP {
+        width: 350px;
+        height: 150px;
+        margin: 25px 0px 29px 0px;
+    }
+
+    .quoteP p {
+        font-size: 14px;
+
+        line-height: 1.53;
+        letter-spacing: 0.48px;
+    }
+
+    .personName .personNameTitle {
+        font-size: 15px;
+        letter-spacing: 0.5px;
+    }
+
+    .personName .personNameSpa {
+        font-size: 13px;
+        letter-spacing: 0.48px;
+    }
+
+    .sharedValuesImg {
+        width: 33.3%;
+    }
+
+    .sharedValuesContainer .textWrap {
+        width: 66.6%;
+    }
+
+    .sharedValuesImg1 {
+        content: url("/images/Shared-Values-1-1.png");
+    }
+
+    .sharedValuesImg2 {
+        content: url("/images/Shared-Values-2-1.png");
+    }
+
+    .sharedValuesImg3 {
+        content: url("/images/Shared-Values-3-1.png");
+    }
+}
+
+@media (max-width: 412px) {
+    .quoteBox {
+        border-top: 1px solid #dee2e6;
+        border-left: 0px;
+
+    }
+
+    .personName {
+        margin: 30px 0px 0px 5px;
+    }
+
+    .quoteP {
+        width: 100%;
+        height: auto;
+        margin: 15px 0px 0px 0px;
+    }
+
+    .quoteP p {
+        font-size: 13px;
+
+        letter-spacing: 0.48px;
+    }
+
+    .personName .personNameTitle {
+        font-size: 14px;
+        letter-spacing: 0.4px;
+    }
+
+    .personName .personNameSpa {
+        font-size: 13px;
+        letter-spacing: 0.4px;
+    }
+    .LearnMoreSection h3 {
+        font-size: 30px;
+        margin: 0px 0px 15px 0px;
+    }
+    .LearnMoreSection p {
+        margin: 0px 0px;
+        padding: 0px 20px;
+        font-size: 17px;
+        line-height: 1.45;
+    }
+    .sliderH3{
+        font-size: 26px;
+        text-align: left;
+margin-left: 10px;
+    }
+        
 }
