--- a/css/slick.css
+++ b/css/slick.css
@@ -118,3 +118,16 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+@media(max-width:1500px){
+}
+@media(max-width:1366px){
+    .sliderP{
+    font-size: 0.9rem;
+    }
+}
+@media(max-width:1280px){
+}
+@media(max-width:1024px){
+}
+@media(max-width:400px){
+}
