--- a/css/accordion.css
+++ b/css/accordion.css
@@ -54,8 +54,35 @@
   }
   @media(max-width:1024px){
     .accordion-title{
-      font-size: 23px;
+      font-size: 22px;
+      margin: 0px 10px 0px 10px;
+      font-weight: 600;
+
     }
   }
-  @media(max-width:400px){
+  @media(max-width:412px){
+    .accordion-title {
+      margin: 0px 5px 0px 5px;
+      font-size: 15px;
+    font-weight: 500;
+    line-height: 2;
+    }
+    .accordion-title #qaIcon{
+      height: 10px;
+      width: 10px;
+      margin: 5px 5px;
+      background-position: center center;
+      background-size: cover;
+    }
+    .active .accordion-title #qaIcon{
+      height: 10px;
+      width: 10px;
+      margin: 5px 5px;
+      background-position: center center;
+      background-size: cover;
+    }
+    .accordion-content {
+      display: none;
+      padding: 10px 30px 10px 30px;
+    }
   }
