--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,6 @@
 
 .tweetDisply {
     width: 397px;
-    /* height: 479px; */
 }
 
 .blogBox {
@@ -453,6 +452,38 @@
         letter-spacing: 0.48px;
     }
 
+    .blogBox {
+        width: 380px;
+        height: 150px;
+        margin: 15px 15px 15px 0;
+        padding: 15px 15px 15px 15px;
+    }
+
+    .blogBox .blogBoxImg img {
+        width: 160px;
+        height: 115px;
+    }
+
+    .blogBox .blogBoxP p {
+        margin-bottom: 0;
+        font-size: 15px;
+        
+    }
+
+    .blogBox .blogBoxP span {
+        font-size: 15px;
+      
+    }
+    .tweetDisply {
+        width: 370px;
+    }
+
+    .sharedValuesH2 {
+       
+        font-size: 40px;
+       
+        text-align: left;
+    }
     .sharedValuesImg {
         width: 33.3%;
     }
@@ -471,6 +502,17 @@
 
     .sharedValuesImg3 {
         content: url("/images/Shared-Values-3-1.png");
+    }
+    .QuestionsSection .QuestionH2 {
+        text-align: center;
+        margin-bottom: 45px;
+        font-size: 45px;
+        font-weight: 700;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #158864;
     }
 }
 
@@ -506,20 +548,46 @@
         font-size: 13px;
         letter-spacing: 0.4px;
     }
+
     .LearnMoreSection h3 {
         font-size: 30px;
         margin: 0px 0px 15px 0px;
     }
+
     .LearnMoreSection p {
         margin: 0px 0px;
         padding: 0px 20px;
         font-size: 17px;
         line-height: 1.45;
     }
-    .sliderH3{
+
+    .sliderH3 {
         font-size: 26px;
         text-align: left;
-margin-left: 10px;
+        margin-left: 10px;
     }
-        
+
+    .blogBox {
+        width: 100%;
+        margin: 15px 0px 15px 0px;
+        padding: 15px 10px 15px 10px;
+    }
+
+    .tweetDisply {
+        width: 98%;
+    }
+    .sharedValuesImg {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .sharedValuesContainer .textWrap {
+        width: 100%;
+    }
+    .QuestionsSection .QuestionH2 {
+        text-align: left;
+        font-size: 35px;
+        font-weight: 700;
+       
+    }
+
 }
