--- a/css/header.css
+++ b/css/header.css
@@ -392,6 +392,16 @@ section .box .boxImg img {
     letter-spacing: normal;
     color: #222c33;
   }
+  section .box h2 {
+    margin: 0 5px 29px 0;
+    font-size: 39px;
+    font-weight: 500;
+  }
+  section .box p {
+    margin: 31px 5px 4px 0;
+    font-size: 17px;
+    
+  }
   section .box .boxImg {
     width: 400px;
     height: 400px;
@@ -402,7 +412,7 @@ section .box .boxImg img {
   }
   section .box {
     border-radius: 0px;
-    /* padding: 35px 35px 35px 35px; */
+    padding: 35px 35px 35px 35px;
     width: 100%;
   }
 }
@@ -433,6 +443,7 @@ section .box .boxImg img {
     text-align: left;
     color: #158864;
   }
+
   section .box p {
     width: 100%;
     /* height: 292px; */
