--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,6 @@
 @media (max-width: 1024px) {
     .quoteP {
         width: 350px;
-        height: 150px;
         margin: 25px 0px 29px 0px;
     }
 
@@ -479,11 +478,8 @@
     }
 
     .sharedValuesH2 {
-       
         font-size: 40px;
-       
-        text-align: left;
-    }
+            }
     .sharedValuesImg {
         width: 33.3%;
     }
@@ -513,6 +509,40 @@
         line-height: 1.33;
         letter-spacing: normal;
         color: #158864;
+    }
+}
+@media (max-width: 850px) {
+    .quoteP {
+        width: 310px;
+        margin: 30px 0px 35px 0px;
+    }
+    .tweetDisply {
+        width: 310px;
+    }
+}
+@media (max-width: 576px) {
+    section .box h2 {
+        width: 100%;
+        /* height: 154px;
+        margin: 0 30px 29px 0;
+        font-size: 40px;
+        font-weight: 500; */
+    }
+    section .box p {
+        width: 100%;
+        /* margin: 31px 29px 4px 0;
+        font-size: 15px; */
+    }
+    section .box .boxImg {
+        width: 100%;
+        height: auto;
+    }
+    .sharedValuesImg {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .sharedValuesContainer .textWrap {
+        width: 100%;
     }
 }
 
@@ -576,13 +606,10 @@
     .tweetDisply {
         width: 98%;
     }
-    .sharedValuesImg {
-        width: 100%;
-        margin-bottom: 15px;
+    .sharedValuesH2 {       
+        text-align: left;
     }
-    .sharedValuesContainer .textWrap {
-        width: 100%;
-    }
+ 
     .QuestionsSection .QuestionH2 {
         text-align: left;
         font-size: 35px;
